Add VMOptions in order to test Java16+